--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -1,5 +1,5 @@
 ################################################################################
-# Messages Bundle for LimeWire 4.0.6
+# Messages Bundle for LimeWire 4.1.5
 # Specialization for: French - France
 # Maintained by the LimeWire Project team.
 ################################################################################
@@ -72,11 +72,11 @@ NO=Non
 GENERAL_AVERAGE_BANDWIDTH=Bande passante moyenne
 GENERAL_ALTERNATE_LOCATIONS=Autres sources valides
 GENERAL_INVALID_ALTERNATE_LOCATIONS=Autres sources invalides
-GENERAL_STARTED_ON=Démarré à 
-GENERAL_FINISHED_ON=Terminé à 
+GENERAL_STARTED_ON=Démarré à
+GENERAL_FINISHED_ON=Terminé à
 GENERAL_TIME_SPENT=Temps écoulé
-GENERAL_REVERT_TO_DEFAULT=Retour aux choix par défaut
-GENERAL_MORE_OPTIONS=Autres options
+GENERAL_REVERT_TO_DEFAULT=Rétablir les options par défaut
+GENERAL_MORE_OPTIONS=Options supplémentaires
 
 # StatusLine, Statistics and GUIUtils
 GENERAL_UNIT_TERABYTES=To
@@ -219,11 +219,17 @@ MENU_NAV_LIB=Médiathèque et liste de lecture
 MENU_NAV_LIB_MNEMONIC=D
 MENU_NAV_LIB_ACCESSIBLE=Affiche l'écran de la médiathèque et la liste de lecture.
 MENU_NAV_SHOPPING=Achats en ligne
-MENU_NAV_SHOPPING_MNEMONIC=L
+MENU_NAV_SHOPPING_MNEMONIC=A
 MENU_NAV_SHOPPING_ACCESSIBLE=Faites vos achats en ligne dans la galerie marchande LimeWire.
 
 MENU_VIEW_TITLE=Affichage
 MENU_VIEW_TITLE_MNEMONIC=H
+MENU_VIEW_SMALL_ICONS=Petites icônes
+MENU_VIEW_SMALL_ICONS_MNEMONIC=P
+MENU_VIEW_SMALL_ICONS_ACCESSIBLE=Utilise de petites icônes.
+MENU_VIEW_TEXT_WITH_ICONS=Etiquettes texte sous les icônes
+MENU_VIEW_TEXT_WITH_ICONS_MNEMONIC=T
+MENU_VIEW_TEXT_WITH_ICONS_ACCESSIBLE=Affiche une étiquette texte sous chaque icône.
 MENU_VIEW_SHOW_HIDE_TITLE=Afficher/Cacher
 MENU_VIEW_SHOW_HIDE_TITLE_MNEMONIC=A
 MENU_VIEW_SHOW_HIDE_ACCESSIBLE=Montre ou cache des onglets individuels.
@@ -342,6 +348,8 @@ SEARCH_PUBLIC_STOP_STRING=Stoppe la recherche
 SEARCH_PUBLIC_BROWSE_STRING=Parcourir l'hôte
 SEARCH_PUBLIC_CHAT_STRING=Discuter avec l'hôte
 SEARCH_PUBLIC_BITZI_LOOKUP_STRING=Identifier avec Bitzi...
+SEARCH_PUBLIC_MAGNET_LOOKUP_STRING=Détails Magnet du fichier
+SEARCH_PUBLIC_HTTP_PAGE_STRING=Page web de(s) fichier(s)
 SEARCH_PUBLIC_REPEAT_SEARCH_STRING=Répéter la recherche
 SEARCH_PUBLIC_BLOCK_STRING=Bannir l'hôte
 SEARCH_RESULT_TABLE_LABEL=Résultats
@@ -391,6 +399,7 @@ RESULT_PANEL_CHAT=Discussion
 RESULT_PANEL_LOCATION=Hôte(s)
 RESULT_PANEL_COUNT=Nb.
 RESULT_PANEL_VENDOR=Vendeur/Version
+RESULT_PANEL_ADDED=Créé
 
 #Filter labels.
 SEARCH_FILTER_ALL=Tous
@@ -398,6 +407,8 @@ SEARCH_FILTER_OPTION=Option
 SEARCH_FILTER_OPTIONS=Options
 SEARCH_FILTER_MEDIA=Média
 
+DOWNLOAD_LAUNCH_BUTTON_LABEL=Aperçu
+DOWNLOAD_LAUNCH_BUTTON_TIP=Lance un aperçu du téléchargement sélectionné.
 DOWNLOAD_KILL_BUTTON_LABEL=Arrêter
 DOWNLOAD_KILL_BUTTON_TIP=Arrête les téléchargements sélectionnés.
 DOWNLOAD_RESUME_BUTTON_LABEL=Reprendre
@@ -468,6 +479,7 @@ STATISTICS_CONNECTION_TURBO_CHARGED=turbo-chargée
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_FREE=Vous pourriez bénéficier en permanence de connexions turbo-chargées avec LimeWire Pro.
 STATISTICS_CONNECTION_TURBO_CHARGED_TIP_PRO=Votre connexion au réseau est optimale et extrèmement fiable pour toutes sortes de recherches.
 STATISTICS_CONNECTION_QUALITY=Qualité\u00a0:
+STATISTICS_CONNECTION_IDLE=Inactif
 
 ################################################################################
 # Key/value pairs for the download window, including labels for the
@@ -493,19 +505,19 @@ DOWNLOAD_STATUS_WAITING=Attente, hôtes occupés
 DOWNLOAD_STATUS_COMPLETE=Terminé
 DOWNLOAD_STATUS_ABORTED=Abandonné
 DOWNLOAD_STATUS_FAILED=Échec de téléchargement, en attente de sources
-DOWNLOAD_STATUS_DOWNLOADING=Chargement depuis 
+DOWNLOAD_STATUS_DOWNLOADING=Chargement depuis
 DOWNLOAD_STATUS_LIBRARY_MOVE_FAILED=Échec de déplacement vers la médiathèque
 DOWNLOAD_STATUS_CORRUPT_FILE=Fichier corrompu
 DOWNLOAD_STATUS_IDENTIFY_CORRUPTION=Récupération du chargement corrompu
 DOWNLOAD_STATUS_RECOVERY_FAILED=Échec de récupération
 DOWNLOAD_STATUS_REQUERYING=Interroge le réseau
-DOWNLOAD_STATUS_WAITING_FOR_REQUERY_START=Attente 
+DOWNLOAD_STATUS_WAITING_FOR_REQUERY_START=Attente
 DOWNLOAD_STATUS_WAITING_FOR_REQUERY_END=s des données
 DOWNLOAD_STATUS_WAITING_FOR_USER=Besoin d'autres sources
 DOWNLOAD_STATUS_WAITING_FOR_CONN=Attente de connexions stables
 DOWNLOAD_HOSTS_LABEL=hôtes
 DOWNLOAD_HOST_LABEL=hôte
-DOWNLOAD_STATUS_REMOTE_QUEUED=Mis en attente en position 
+DOWNLOAD_STATUS_REMOTE_QUEUED=Mis en attente en position
 DOWNLOAD_STATUS_HASHING=Verifie l'intégrité du fichier...
 DOWNLOAD_STATUS_SAVING=Sauvegarde du fichier...
 DOWNLOAD_AWAITING_SOURCES=En attente d'autres sources...
@@ -570,11 +582,19 @@ MONITOR_VIEW_LEAF_MESSAGE=Votre agent est un noeud terminal derrière un Ultrapai
 # Key/value pairs for gui download speed constants -- used in the
 # options window, setup windows, and potentially other places
 ################################################################################
-MODEM_SPEED=Modem/RNIS: 56-128 kb/s
-CABLE_SPEED=Câble/DSL: 350-999 kb/s
-T1_SPEED=T1: 1-2,9 Mb/s
-T3_SPEED=T3 ou plus: 3 Mb/s
+MODEM_SPEED=Modem/RNIS (56-128 kb/s)
+CABLE_SPEED=Câble/ADSL (350-999 kb/s)
+T1_SPEED=T1/SDSL (1-2,9 Mb/s)
+T3_SPEED=T3/HDSL (3 Mb/s) ou plus
 MULTICAST_SPEED=Ethernet
+
+################################################################################
+# HTML Page stuff
+################################################################################
+HTML_PAGE_TITLE=Page de téléchargement
+# SPACE AT END NEEDS TO BE THERE!!!
+HTML_PAGE_LISTING=Liste des fichiers pour
+HTML_PAGE_MAGNET=Liens Magnet de téléchargement rapide (si vous avez installé LimeWire)
 
 ###################################################################
 # Key/value pairs for ConnectionView
@@ -609,7 +629,7 @@ CV_TABLE_STRING_STANDARD=Basique
 CV_TABLE_STRING_STANDARDS=basiques
 CV_TABLE_STRING_INCOMING=Entrant
 CV_TABLE_STRING_OUTGOING=Sortant
-CV_TABLE_STRING_CONNECTED_ON=Connecté depuis le 
+CV_TABLE_STRING_CONNECTED_ON=Connecté depuis le
 CV_STRING_CLIENT=[Terminal]
 CV_STRING_ULTRAPEER=[Ultrapair]
 CV_TABLE_STRING_KBPSEC=Ko/s
@@ -631,6 +651,8 @@ LIBRARY_TREE_NEW_FOLDER_LABEL=Nouveau dossier
 LIBRARY_TREE_UNSHARE_FOLDER_LABEL=Ne plus partager
 LIBRARY_TREE_RENAME_FOLDER_LABEL=Renommer
 LIBRARY_TREE_TO_PLAYLIST_FOLDER_LABEL=Vers liste MP3
+LIBRARY_TREE_SAVED_DIRECTORY=Fichiers sauvegardés
+LIBRARY_TREE_INCOMPLETE_DIRECTORY=Fichiers incomplets
 
 ################################################################################
 # Key/value pairs for burn cd link
@@ -721,7 +743,7 @@ GO_PRO_LATER_TIP=Acquérir LimeWire PRO plus tard.
 # Key/value pairs for XML
 ###################################################################
 #MetaEditorFrame
-META_EDITOR_ANNOTATING_FILE=Annotation du fichier 
+META_EDITOR_ANNOTATING_FILE=Annotation du fichier
 META_EDITOR_SAVE_LABEL=Sauver
 META_EDITOR_CANCEL_LABEL=Annuler
 META_EDITOR_DELETE_LABEL=Effacer
@@ -814,6 +836,7 @@ CHAT_YOU=Vous
 # Key/value pairs for splash screen status text
 ###################################################################
 SPLASH_STATUS_RESOURCE_MANAGER=Chargement des ressources...
+SPLASH_STATUS_HTML_ENGINE=Chargement du moteur HTML...
 SPLASH_STATUS_SEARCH_WINDOW=Chargement du panneau de recherche...
 SPLASH_STATUS_OPTIONS_WINDOW=Chargement de l'écran des options...
 SPLASH_STATUS_USER_SETTINGS=Chargement des préférences utilisateur...
@@ -828,10 +851,12 @@ SPLASH_STATUS_MONITOR_WINDOW=Chargement du panneau du moniteur...
 SPLASH_STATUS_CONNECTION_WINDOW=Chargement du panneau des connexions...
 SPLASH_STATUS_STATISTICS_WINDOW=Chargement de l'écran de statistiques...
 SPLASH_STATUS_STATUS_WINDOW=Chargement de la barre d'état...
+SPLASH_STATUS_PLAYLIST_WINDOW=Chargement du panneau de liste de lecture...
 SPLASH_STATUS_MENUS=Chargement des menus...
 SPLASH_STATUS_MESSAGE_SERVICE=Chargement des messages...
 SPLASH_STATUS_ICONS=Chargement des icônes...
-SPLASH_STATUS_I18N=Chargement du support international...
+SPLASH_STATUS_I18N=Chargement du support de l'internationalisation...
+SLPASH_STATUS_DAAP=Chargement du Protocole d'Accès Audio Numérique (DAAP)...
 SPLASH_STATUS_COMPONENT_LOADING_ACCEPTOR=Chargement de l'auditeur de connexions...
 SPLASH_STATUS_COMPONENT_LOADING_MESSAGE_ROUTER=Chargement du routeur de messages...
 SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_MANAGER=Chargement du gestionnaire de connexions...
@@ -844,9 +869,10 @@ SPLASH_STATUS_COMPONENT_LOADING_HTTPACCEPTOR=Chargement de l'auditeur MAGNET...
 SPLASH_STATUS_COMPONENT_LOADING_PINGER=Chargement de l'auditeur d'agents pairs...
 SPLASH_STATUS_COMPONENT_LOADING_CONNECTION_WATCHDOG=Chargement du gestionnaire de connexions bloquées...
 SPLASH_STATUS_COMPONENT_LOADING_SAVED_FILE_MANAGER=Chargement de fichiers sauvegardés...
+SPLASH_STATUS_COMPONENT_LOADING_SIMPP_MANAGER=Chargement des réglages de sécurité...
 
 ##################################################################
-# Key/value pairs for the message displayed to prompt users to 
+# Key/value pairs for the message displayed to prompt users to
 # support LimeWire through contributions.
 ##################################################################
 SUPPORT_LIMEWIRE_01=Soutenez le développement futur de LimeWire.
@@ -902,7 +928,7 @@ MESSAGE_UNABLE_TO_RENAME_FILE_END=Il est peut-être utilisé par une autre applica
 MESSAGE_INCOMPLETE_DIRECTORY_START=LimeWire ne vous autorise pas à
 MESSAGE_INCOMPLETE_DIRECTORY_END=le dossier réservé pour les fichiers incomplets en cours de téléchargement.
 MESSAGE_INVALID_SAVE_DIRECTORY=LimeWire ne peut pas utiliser le dossier spécifié pour la sauvegarde des fichiers. Veuillez essayer dans un autre dossier.
-MESSAGE_FILE_CORRUPT=LimeWire a détecté une corruption des données du fichier 
+MESSAGE_FILE_CORRUPT=LimeWire a détecté une corruption des données du fichier
 MESSAGE_CONTINUE_DOWNLOAD=Voulez-vous poursuivre le téléchargement\u00a0?
 MESSAGE_LANG_CHANGE=Notez que LimeWire doit être redémarré pour prendre en compte le changement de langue. Aussi, assurez-vous de disposer des polices de caractères requises pour l'affichage de la langue sélectionnée.
 
@@ -923,7 +949,7 @@ NO_INTERNET=Votre système ne semble disposer d'aucune connexion Internet active 
 # internet and you haven't used your machine in awhile, so we'll automatically
 # keep trying.
 ################################################################################
-NO_INTERNET_RETRYING=Votre système ne semble disposer d'aucune connexion Internet active ou un système pare-feu empêche LimeWire d'accéder à Internet. LimeWire continuera automatiquement à tenter de se connecter au réseau à moins que vous sélectionniez "Déconnecter" dans le menu Fichier.
+NO_INTERNET_RETRYING=Votre système ne semble disposer d'aucune connexion Internet active ou un système pare-feu empêche LimeWire d'accéder à Internet. LimeWire tentera de se connecter automatiquement au réseau, sauf si vous sélectionnez "Déconnecter" dans le menu Fichier.
 
 ################################################################################
 # Key/value pair for the message shown when LimeWire is trying to connect
@@ -964,6 +990,8 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire était incapable de se connecter au serveu
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
+ERROR_DAAP_START_FAILED=LimeWire n'a pas pu démarrer le service de Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes). Cette fonctionalité sera désactivée. Vous pouvez la rétablir dans les options, sous iTunes -> Partage.
+ERROR_DAAP_RUN_ERROR=LimeWire a rencontré une erreur du Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes).  This feature will be turned off.  Cette fonctionalité sera désactivée. Vous pouvez la rétablir dans les options, sous iTunes -> Partage.
 ERROR_NO_PORTS_AVAILABLE=LimeWire n'a pas pu déterminer un port utilisable pour écouter les connexions. Certaines fonctions de LimeWire ne fonctionneront pas de la façon attendue.
 ERROR_PORT_UNAVAILABLE=Port non disponible. Veuillez sélectionner un port différent.
 ERROR_KEEP_ALIVE=LimeWire ne vous permet pas de maintenir autant de connexions actives, car cela crée un traffic excessif qui ralentit le réseau.
@@ -1005,8 +1033,9 @@ ERROR_SAVE_META_ID3=Fichier de format incorrect ou corrompu. Les données n'ont p
 ERROR_SAVE_META_DISK=Erreur interne. Les données n'ont pu être sauvées.
 ERROR_SAVE_META_BAD=Format entré incorrect. Les modifications ne seront pas sauvées.
 ERROR_REMOVE_LAST_COL=Vous ne pouvez pas cacher toutes les colonnes.
-ERROR_BROWSE_HOST_FAILED_BEGIN_KEY=Impossible de parcourir les fichiers de l'hôte 
+ERROR_BROWSE_HOST_FAILED_BEGIN_KEY=Impossible de parcourir les fichiers de l'hôte
 ERROR_BROWSE_HOST_FAILED_END_KEY=.
+ERROR_APPLYING_INVALID_THEME_FILE=Le fichier thème que vous appliquez est invalide. LimeWire rétablira le thème par défaut.
 ERROR_INVALID_THEME_FILE=Le fichier thème que vous avez spécifié n'existe pas ou est invalide. Veuillez utiliser un autre fichier ou sélectionner le thème par défaut.
 ERROR_THEME_OUT_OF_DATE=Le fichier thème que vous avez sélectionné est obsolète. Veuillez télécharger la dernière version de ce thème.
 ERROR_THEME_OUT_OF_DATE_TITLE=Thème invalide
@@ -1018,6 +1047,8 @@ ERROR_ITUNES_SCRIPT=Limewire n'est pas parvenu à charger le script d'intégration
 ERROR_ITUNES_LINK=LimeWire n'est pas parvenu à charger les composants nécessaires pour iTunes et a désactivé l'intégration iTunes. Pour réactiver le support pour iTunes, ouvrez le menu LimeWire -> Préférences, sélectionnez iTunes, et cochez la case d'activation du support pour iTunes.
 ERROR_ITUNES_INTEGRATION=Une erreur s'est produite dans l'intégration iTunes pour LimeWire. Pour prévenir les erreurs ultérieures, LimeWire a désactivé l'intégration iTunes. Pour réactiver le support pour iTunes, ouvrez le menu LimeWire -> Préférences, sélectionnez iTunes, et cochez la case d'activation du support pour iTunes.
 ERROR_PROPS_CORRUPTED=Un fichier utilisé pour sauvegarder vos préférences était endommagé. LimeWire utilisera des valeurs par défaut.
+ERROR_QUERY_TOO_LARGE=Votre recherche est trop longue. Veuillez la raccourcir et réessayer.
+ERROR_XML_QUERY_TOO_LARGE=Votre recherche est trop spécifique. Veuillez supprimer our raccourcir certains critères et réessayer.
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
@@ -1037,6 +1068,8 @@ OPTIONS_SHUTDOWN_MAIN_TITLE=Fermeture
 OPTIONS_CHAT_MAIN_TITLE=Discussion
 OPTIONS_PLAYER_MAIN_TITLE=Lecteur média
 OPTIONS_ITUNES_MAIN_TITLE=iTunes
+OPTIONS_ITUNES_PREFERENCE_MAIN_TITLE=Import
+OPTIONS_ITUNES_DAAP_MAIN_TITLE=Partage
 OPTIONS_APPS_MAIN_TITLE=Applications externes
 OPTIONS_BUGS_MAIN_TITLE=Rapports d'erreur
 OPTIONS_GUI_MAIN_TITLE=Interface utilisateur
@@ -1234,6 +1267,20 @@ OPTIONS_PLAYER_PREFERENCE_LABEL=Vous pouvez utiliser le lecteur intégré ou le le
 OPTIONS_ITUNES_SUPPORT_ACTIVE_CHECK_BOX_LABEL=Activer le support pour iTunes:
 OPTIONS_ITUNES_PREFERENCE_TITLE=Options iTunes
 OPTIONS_ITUNES_PREFERENCE_LABEL=Vous pouvez activer le support pour iTunes (Mac OSX uniquement).
+
+################################################################################
+# Key/Value pairs for the iTunes/DAAP options in the options window
+################################################################################
+OPTIONS_ITUNES_DAAP_PREFERENCE_TITLE=Partage
+OPTIONS_ITUNES_DAAP_PREFERENCE_LABEL=Vous pouvez partager votre musique sur le réseau local et la rendre accessible pour iTunes ou d'autres lecteurs supportant le protocole DAAP.\n\n Activez le mode de compatibilité (BIO) si vous éprouvez des problèmes avec le Partage iTunes. Ce mode utilise davantage de ressources et est plus lent, mais peut éviter certains problèmes.
+OPTIONS_ITUNES_DAAP_SUPPORT_DAAP_ENABLED_LABEL=Partager ma musique
+OPTIONS_ITUNES_DAAP_SUPPORT_SERVICE_NAME_LABEL=Nom partagé\u00a0:
+OPTIONS_ITUNES_DAAP_SUPPORT_USE_BIO_LABEL=Mode de compatibilité (BIO)
+
+OPTIONS_ITUNES_DAAP_PASSWORD_TITLE=Demander un mot de passe\u00a0:
+OPTIONS_ITUNES_DAAP_PASSWORD_LABEL=Vous pouvez limiter l'accès à ce service avec un mot de passe.
+OPTIONS_ITUNES_DAAP_PASSWORD_CHECKBOX_LABEL=Demander un mot de passe
+OPTIONS_ITUNES_DAAP_PASSWORD_TEXTFIELD_LABEL=Mot de passe\u00a0:
 
 ################################################################################
 # Key/Value pairs for url handler options
@@ -1560,6 +1607,9 @@ STATS_QUERY_REQUEST_HOPS_TITLE=Transits
 STATS_QUERY_REQUEST_HOPS_LABEL=Nombre de recherches reçues, par nombre de transits déjà effectués (Hops).
 STATS_QUERY_REQUEST_TTL_TITLE=Durée de vie
 STATS_QUERY_REQUEST_TTL_LABEL=Nombre de recherches reçues, par durée de vie (TTL).
+# Advanced Gnutella Message special queries
+STATS_SPECIAL_QUERIES_TITLE=Recherches spéciales
+STATS_SPECIAL_QUERIES_LABEL=Toutes les recherches marquées spéciales.
 # Advanced Gnutella Message hops/ttl for query hits
 STATS_QUERY_REPLY_HOPS_TITLE=Transits
 STATS_QUERY_REPLY_HOPS_LABEL=Nombre de résultats reçus, par nombre de transits déjà effectués (Hops).
@@ -1904,8 +1954,8 @@ STATS_TOTAL_CONNECTION_ATTEMPTS_LABEL=Nombre total de tentatives de connections 
 ################################################################################
 # Key/value pairs for advanced HTTP statistics
 ################################################################################
-STATS_TOTAL_HTTP_REQUESTS_TITLE=Requêtes HTTP
-STATS_TOTAL_HTTP_REQUESTS_LABEL=Total des requêtes HTTP entrantes reçues au cours du temps. Cela inclue tous les types de requêtes (GET, HEAD, GIV, CHAT, GNUTELLA, MAGNET, etc..).
+STATS_TOTAL_HTTP_REQUESTS_TITLE=Requêtes de connexion
+STATS_TOTAL_HTTP_REQUESTS_LABEL=Total des requêtes de connexion reçues au cours du temps. Cela inclue tous les types de requêtes (GET, HEAD, GIV, CHAT, GNUTELLA, MAGNET, etc..).
 
 ################################################################################
 # Key/value pairs for advanced Download statistics
@@ -1959,7 +2009,7 @@ STATS_RECORD_STATS_LABEL=Sauvegarder les statistiques de ce graphique.
 
 # Bandwidth
 UPSTREAM_BANDWIDTH=Débit total sortant
-DOWNSTREAM_BANDWIDTH=Débit total entrant 
+DOWNSTREAM_BANDWIDTH=Débit total entrant
 HTTP_BANDWIDTH=Débit total HTTP
 HTTP_HEADER_BANDWIDTH=Débit d'entêtes HTTP
 HTTP_BODY_BANDWIDTH=Débit de contenus HTTP
@@ -2079,6 +2129,9 @@ HOPS7=7 transits effectués
 HOPS8=8 transits effectués
 HOPS9=9 transits effectués
 
+# Special Query labels
+WHAT_IS_NEW_QUERIES=Quoi de neuf\u00a0?
+
 # TTL labels
 TTL0=Fin de vie
 TTL1=1 transit restant
@@ -2153,10 +2206,11 @@ DOWNLOAD_CONNECT_DIRECT_SUCCESS=Connexion directe réussie
 DOWNLOAD_CONNECT_DIRECT_FAILURES=Connexion directe échouée
 DOWNLOAD_CONNECT_PUSH_SUCCESS=Mandat de renvoi réussi
 DOWNLOAD_PUSH_FAILURE_INTERRUPTED=Mandat échoué (interruption)
-DOWNLOAD_PUSH_FAILURE_NO_ROUTE=Mandat échoué (pas de route)
 DOWNLOAD_PUSH_FAILURE_NO_RESPONSE=Mandat échoué (GIV non reçu)
 DOWNLOAD_PUSH_FAILURE_LOST=Mandat échoué (connex. perdue)
-DOWNLOAD_TCP_CONNECT_TIME=Temps de connexion TCP
+DOWNLOAD_TCP_CONNECT_TIME=Temps d'établissement TCP
+DOWNLOAD_FW_FW_SUCCESS=Interconnexion de pare-feux réussie
+DOWNLOAD_FW_FW_FAILURE=Interconnexion de pare-feux échouée
 
 # Advanced Upload statistics
 UPLOAD_STAT_THEX=Requête THEX
@@ -2190,6 +2244,8 @@ UPLOAD_STAT_COMPLETED=Transfert effectué
 UPLOAD_STAT_INTERRUPTED=Transfert interrompu
 UPLOAD_STAT_STALLED=Transfert bloqué
 UPLOAD_STAT_COMPLETED_FILE=Transferts de fichier accomplis
+UPLOAD_FW_FW_SUCCESS=Interconnexion de pare-feux réussie
+UPLOAD_FW_FW_FAILURE=Interconnexion de pare-feux échouée
 
 # Advanced Handshaking statistics
 LEAF_OUTGOING_REJECT_LEAF=Sortant rej. (terminal)
