QRP memory optimization -- compact the BitSet after handling the patch.  also add column to Connection table showing the number of empty elements in the bitset's array vs the number of allocated elements.  what we really need is an efficient sparse BitSet implementation to handle leaves' QRP tables.

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -611,6 +611,7 @@ CV_COLUMN_VENDOR=Vendor/Version
 CV_COLUMN_TIME=Time
 CV_COLUMN_COMPRESSION=Compressed (I/O)
 CV_COLUMN_QRP_FULL=QRP (%)
+CV_COLUMN_QRP_USED=QRP Empty
 CV_BUTTON_REMOVE=Remove
 CV_BUTTON_TOOLTIP_REMOVE=Remove the selected connections
 CV_BUTTON_ADD=Add
