change XML_QUERY messages to XML_SEARCH Remove a forgotten English sub-sentence

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -970,7 +970,7 @@ ERROR_LOCKED_BY_PROCESS_GENERIC=Limewire ne parvient pas à ouvrir un fichier néc
 ERROR_ACCESS_DENIED_DOWNLOAD=Limewire n'a pas pu créer ou poursuivre l'écriture d'un fichier incomplet pour le téléchargement sélectionné car vous ne disposez pas des droits d'accès permettant d'écrire des fichiers dans le dossier des chargements incomplets. Pour continuer à utiliser LimeWire, veuiller choisir un dossier de sauvegarde différent.
 ERROR_ACCESS_DENIED_GENERIC=LimeWire n'a pas pu écrire un fichier nécessaire car car vous ne disposez pas des droits d'accès nécessaire à ce fichier. Vos préférences peuvent ne pas être conservées lors du prochain lancement de LimeWire, ou Limewire pourrait se comporter de façon inattendue.
 ERROR_INVALID_NAME_DOWNLOAD=LimeWire n'a pas pu ouvrir le fichier incomplet pour le chargement sélectionné car le nom de fichier contient des caractères non supportés par le système de fichiers de votre votre ordinateur.
-ERROR_INVALID_NAME_GENERIC=LimeWire ne pparvient pas à ouvrir un fichier nécessaire car le nom de ce fichier contient des caractères non supportés par le système de fichiers de votre ordinateur. LimeWire pourriat se comporter de façon inattendue.
+ERROR_INVALID_NAME_GENERIC=LimeWire n'a pas pu ouvrir un fichier nécessaire car le nom de ce fichier contient des caractères non supportés par le système de fichiers de votre ordinateur. LimeWire pourriat se comporter de façon inattendue.
 
 ################################################################################
 # Key/Value pairs for internal error messages
@@ -990,8 +990,8 @@ ERROR_INTERNAL_SERVLET_FAILED=LimeWire était incapable de se connecter au serveu
 ################################################################################
 # Key/Value pairs for error messages
 ################################################################################
-ERROR_DAAP_START_FAILED=LimeWire n'a pas pu démarrer le service de Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes). Cette fonctionalité sera désactivée. Vous pouvez la rétablir dans les options, sous iTunes -> Partage.
-ERROR_DAAP_RUN_ERROR=LimeWire a rencontré une erreur du Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes).  This feature will be turned off.  Cette fonctionalité sera désactivée. Vous pouvez la rétablir dans les options, sous iTunes -> Partage.
+ERROR_DAAP_START_FAILED=LimeWire n'a pas pu démarrer le service de Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes). Cette fonctionalité sera désactivée. Vous pouvez la rétablir dans les Options, sous iTunes -> Partage.
+ERROR_DAAP_RUN_ERROR=LimeWire a rencontré une erreur du Protocole d'Accès Audio Numérique DAAP (pour le partage de fichiers dans iTunes). Cette fonctionalité sera désactivée. Vous pouvez la rétablir dans les Options, sous iTunes -> Partage.
 ERROR_NO_PORTS_AVAILABLE=LimeWire n'a pas pu déterminer un port utilisable pour écouter les connexions. Certaines fonctions de LimeWire ne fonctionneront pas de la façon attendue.
 ERROR_PORT_UNAVAILABLE=Port non disponible. Veuillez sélectionner un port différent.
 ERROR_KEEP_ALIVE=LimeWire ne vous permet pas de maintenir autant de connexions actives, car cela crée un traffic excessif qui ralentit le réseau.
@@ -1047,8 +1047,8 @@ ERROR_ITUNES_SCRIPT=Limewire n'est pas parvenu à charger le script d'intégration
 ERROR_ITUNES_LINK=LimeWire n'est pas parvenu à charger les composants nécessaires pour iTunes et a désactivé l'intégration iTunes. Pour réactiver le support pour iTunes, ouvrez le menu LimeWire -> Préférences, sélectionnez iTunes, et cochez la case d'activation du support pour iTunes.
 ERROR_ITUNES_INTEGRATION=Une erreur s'est produite dans l'intégration iTunes pour LimeWire. Pour prévenir les erreurs ultérieures, LimeWire a désactivé l'intégration iTunes. Pour réactiver le support pour iTunes, ouvrez le menu LimeWire -> Préférences, sélectionnez iTunes, et cochez la case d'activation du support pour iTunes.
 ERROR_PROPS_CORRUPTED=Un fichier utilisé pour sauvegarder vos préférences était endommagé. LimeWire utilisera des valeurs par défaut.
-ERROR_QUERY_TOO_LARGE=Votre recherche est trop longue. Veuillez la raccourcir et réessayer.
-ERROR_XML_QUERY_TOO_LARGE=Votre recherche est trop spécifique. Veuillez supprimer our raccourcir certains critères et réessayer.
+ERROR_SEARCH_TOO_LARGE=Votre recherche est trop longue. Veuillez la raccourcir et réessayer.
+ERROR_XML_SEARCH_TOO_LARGE=Votre recherche est trop spécifique. Veuillez supprimer our raccourcir certains critères et réessayer.
 
 ################################################################################
 # Keys for the titles of the options panes. The corresponding values represent
