Add Japanese module. Thanks to heavy_baby.

--- a/lib/schemas/xml/display/audio_ja.properties
+++ b/lib/schemas/xml/display/audio_ja.properties
@@ -1,16 +1,16 @@
-audios__audio             = \u97f3\u697d
-audios__audio__title__    = \u66f2\u540d^100
+audios__audio             = \u30aa\u30fc\u30c7\u30a3\u30aa
+audios__audio__title__    = \u984c\u540d^100
 audios__audio__artist__   = \u30a2\u30fc\u30c6\u30a3\u30b9\u30c8^60
 audios__audio__album__    = \u30a2\u30eb\u30d0\u30e0^60
 audios__audio__genre__    = \u30b8\u30e3\u30f3\u30eb
 audios__audio__track__    = \u30c8\u30e9\u30c3\u30af
-audios__audio__type__     = \u5f62\u5f0f
-audios__audio__seconds__  = \u6642\u9593^20
+audios__audio__type__     = \u30bf\u30a4\u30d7
+audios__audio__seconds__  = \u9577\u3055^20
 audios__audio__year__     = \u5e74^20
 audios__audio__language__ = \u8a00\u8a9e
 audios__audio__SHA1__     = \u30cf\u30c3\u30b7\u30e5^10
 audios__audio__bitrate__  = \u30d3\u30c3\u30c8\u30ec\u30fc\u30c8^20
-audios__audio__price__    = \ufeff\u5024\u6bb5
+audios__audio__price__    = \u4fa1\u683c
 audios__audio__link__     = \u30ea\u30f3\u30af
 audios__audio__comments__ = \u30b3\u30e1\u30f3\u30c8
 audios__audio__action__ = \u30a2\u30af\u30b7\u30e7\u30f3^10
