updated CountPercent to also create the translation html page if passed 'html' as a parameter.  the table on the right could use some work, but it looks pretty good.  added a new LOCALE_ENGLISH_LANGUAGE_NAME to each message bundle to get an english name of the bundle.

--- a/lib/messagebundles/MessagesBundle_el.properties
+++ b/lib/messagebundles/MessagesBundle_el.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=Modern standard
 LOCALE_SCRIPT_CODE=Grek
 LOCALE_SCRIPT_NAME=Greek
+LOCALE_ENGLISH_LANGUAGE_NAME=Greek
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
