--- a/lib/messagebundles/MessagesBundle_eu.properties
+++ b/lib/messagebundles/MessagesBundle_eu.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
+LOCALE_ENGLISH_LANGUAGE_NAME=Basque
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
