--- a/lib/messagebundles/MessagesBundle_ko.properties
+++ b/lib/messagebundles/MessagesBundle_ko.properties
@@ -11,6 +11,8 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=\uad6d\uc81c
 LOCALE_SCRIPT_CODE=Hang
 LOCALE_SCRIPT_NAME=Hangul
+LOCALE_ENGLISH_LANGUAGE_NAME=Korean
+
 #UTF-8 file edited with Notepad/Windows 2000, and a "Gulim" or "GulimChe" font.
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
