--- a/lib/messagebundles/MessagesBundle_pt_BR.properties
+++ b/lib/messagebundles/MessagesBundle_pt_BR.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=Brasileiro
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
+LOCALE_ENGLISH_LANGUAGE_NAME=Portuguese
 
 # To simplify management of these resources, all other localized definitions
 # are now found in the Standard Portuguese file "MessagesBundle_pt.properties",
