--- a/lib/messagebundles/MessagesBundle_ta.properties
+++ b/lib/messagebundles/MessagesBundle_ta.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Taml
 LOCALE_SCRIPT_NAME=\u0ba4\u0bae\u0bbf\u0bb4
+LOCALE_ENGLISH_LANGUAGE_NAME=Tamil
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
