--- a/lib/messagebundles/MessagesBundle_th.properties
+++ b/lib/messagebundles/MessagesBundle_th.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Thai
 LOCALE_SCRIPT_NAME=\u0e20\u0e32\u0e29\u0e32\u0e44\u0e17\u0e22
+LOCALE_ENGLISH_LANGUAGE_NAME=Thai
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
