--- a/lib/messagebundles/MessagesBundle_ur.properties
+++ b/lib/messagebundles/MessagesBundle_ur.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Arab
 LOCALE_SCRIPT_NAME=Arabic
+LOCALE_ENGLISH_LANGUAGE_NAME=Urdu
 # File edited with Notepad on Windows XP/2000, "Microsoft Sans Serif" font
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
