--- a/lib/messagebundles/MessagesBundle_zh_TW.properties
+++ b/lib/messagebundles/MessagesBundle_zh_TW.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=\u570b\u969b
 LOCALE_SCRIPT_CODE=Hani
 LOCALE_SCRIPT_NAME=Han
+LOCALE_ENGLISH_LANGUAGE_NAME=Chinese (Traditional)
 # UTF-8 file created on Windows 2000/XP NotePad with Big5 "\u7d30\u660e\u9ad4" MingLiU font.
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
