--- a/lib/messagebundles/MessagesBundle_bn.properties
+++ b/lib/messagebundles/MessagesBundle_bn.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Beng
 LOCALE_SCRIPT_NAME=Bengali
+LOCALE_ENGLISH_LANGUAGE_NAME=Bengali
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
