--- a/lib/messagebundles/MessagesBundle_bu.properties
+++ b/lib/messagebundles/MessagesBundle_bu.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Mymr
 LOCALE_SCRIPT_NAME=Myanmar
+LOCALE_ENGLISH_LANGUAGE_NAME=Myanmarese
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
