--- a/lib/messagebundles/MessagesBundle_en__RTL.properties
+++ b/lib/messagebundles/MessagesBundle_en__RTL.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=RTL
 LOCALE_VARIANT_NAME=Left-To-Right Layout
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
+LOCALE_ENGLISH_LANGUAGE_NAME=English
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
