--- a/lib/messagebundles/MessagesBundle_fa.properties
+++ b/lib/messagebundles/MessagesBundle_fa.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Arab
 LOCALE_SCRIPT_NAME=Arabic
+LOCALE_ENGLISH_LANGUAGE_NAME=Persian
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
