--- a/lib/messagebundles/MessagesBundle_hu.properties
+++ b/lib/messagebundles/MessagesBundle_hu.properties
@@ -11,6 +11,8 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin
+LOCALE_ENGLISH_LANGUAGE_NAME=Hungarian
+
 # UTF-8 encoded file (uses some Central European characters from ISO-8859-2)
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
