--- a/lib/messagebundles/MessagesBundle_sr.properties
+++ b/lib/messagebundles/MessagesBundle_sr.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Cyrl
 LOCALE_SCRIPT_NAME=Cyrillic
+LOCALE_ENGLISH_LANGUAGE_NAME=Serbian
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
