--- a/lib/messagebundles/MessagesBundle_uk.properties
+++ b/lib/messagebundles/MessagesBundle_uk.properties
@@ -11,6 +11,7 @@ LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Cyrl
 LOCALE_SCRIPT_NAME=Cyrillic
+LOCALE_ENGLISH_LANGUAGE_NAME=Ukrainian
 
 
 ################################################################################
