Change Unicode script names to English

--- a/lib/messagebundles/MessagesBundle_ta.properties
+++ b/lib/messagebundles/MessagesBundle_ta.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=India
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Taml
-LOCALE_SCRIPT_NAME=\u0ba4\u0bae\u0bbf\u0bb4
+LOCALE_SCRIPT_NAME=Tamil
 LOCALE_ENGLISH_LANGUAGE_NAME=Tamil
 
 ################################################################################
