--- a/lib/messagebundles/MessagesBundle_th.properties
+++ b/lib/messagebundles/MessagesBundle_th.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=\u0e1b\u0e23\u0e30\u0e40\u0e17\u0e28\u0e44\u0e17\u0e22
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Thai
-LOCALE_SCRIPT_NAME=\u0e20\u0e32\u0e29\u0e32\u0e44\u0e17\u0e22
+LOCALE_SCRIPT_NAME=Thai
 LOCALE_ENGLISH_LANGUAGE_NAME=Thai
 
 ################################################################################
