--- a/lib/messagebundles/MessagesBundle_iw.properties
+++ b/lib/messagebundles/MessagesBundle_iw.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=\u05d9\u05e9\u05e8\u05d0\u05dc
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=\u05d1\u05d9\u05e0\u05dc\u05d0\u05d5\u05de\u05d9
 LOCALE_SCRIPT_CODE=Hebr
-LOCALE_SCRIPT_NAME=\u05e2\u05d1\u05e8\u05d9\u05ea
+LOCALE_SCRIPT_NAME=Hebrew
 LOCALE_ENGLISH_LANGUAGE_NAME=Hebrew
 
 # UTF-8 file edited with Notepad on Windows NT/2000/XP with the "Courier New" font
