Subdivide the Latin scripts family name

--- a/lib/messagebundles/MessagesBundle_vi.properties
+++ b/lib/messagebundles/MessagesBundle_vi.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=Vi\u1ec7t Nam
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=Modern Latin script
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
+LOCALE_SCRIPT_NAME=Latin (Other)
 LOCALE_ENGLISH_LANGUAGE_NAME=Vietnamese
 
 ################################################################################
