--- a/lib/messagebundles/MessagesBundle_sl.properties
+++ b/lib/messagebundles/MessagesBundle_sl.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=Slovenija
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
+LOCALE_SCRIPT_NAME=Latin (Central European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Slovenian
 # UTF-8 file edited with Notepad on Windows NT/2000/XP with "Courier New" font
 ################################################################################
