--- a/lib/messagebundles/MessagesBundle_cs.properties
+++ b/lib/messagebundles/MessagesBundle_cs.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=\u010cesk\u00e1 republika
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
+LOCALE_SCRIPT_NAME=Latin (Central European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Czech
 
 ################################################################################
