--- a/lib/messagebundles/MessagesBundle_hu.properties
+++ b/lib/messagebundles/MessagesBundle_hu.properties
@@ -10,7 +10,7 @@ LOCALE_COUNTRY_NAME=Magyarorszag
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
+LOCALE_SCRIPT_NAME=Latin (Central European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Hungarian
 
 # UTF-8 encoded file (uses some Central European characters from ISO-8859-2)
