Thanks to heavy_baby for the previous revision

--- a/lib/messagebundles/MessagesBundle_ja.properties
+++ b/lib/messagebundles/MessagesBundle_ja.properties
@@ -1,7 +1,7 @@
 ################################################################################
 # Messages Bundle for LimeWire 4.1.5
 # Specialization for: Japanese (Nippongo) - Japan
-# Thanks to: Yuji T. Additions by Takanobu Torigoe & Shinada Atsushi.
+# Thanks to: Yuji T. Additions by Takanobu Torigoe & Shinada Atsushi, "heavy_baby".
 ################################################################################
 LOCALE_LANGUAGE_CODE=ja
 LOCALE_LANGUAGE_NAME=\u65e5\u672c\u8a9e
