One more French resource for QRP empty column

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -611,7 +611,8 @@ CV_COLUMN_PROTOCOL=Protocole
 CV_COLUMN_VENDOR=Vendeur/Version
 CV_COLUMN_TIME=Durée
 CV_COLUMN_COMPRESSION=Compression (E/S)
-CV_COLUMN_QRP_FULL=Traffic QRP (%)
+CV_COLUMN_QRP_FULL=QRP (%/éléments)
+CV_COLUMN_QRP_USED=QRP vide (%)
 CV_BUTTON_REMOVE=Ôter
 CV_BUTTON_TOOLTIP_REMOVE=Enlève la connexion sélectionnée
 CV_BUTTON_ADD=Ajouter
