*** empty log message ***

--- a/lib/messagebundles/MessagesBundle_pt_BR.properties
+++ b/lib/messagebundles/MessagesBundle_pt_BR.properties
@@ -5,7 +5,7 @@
 ################################################################################
 LOCALE_LANGUAGE_CODE=pt
 LOCALE_LANGUAGE_NAME=Português
-LOCALE_COUNTRY_CODE=
+LOCALE_COUNTRY_CODE=BR
 LOCALE_COUNTRY_NAME=Brasil
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=Brasileiro
