--- a/lib/messagebundles/MessagesBundle_pt.properties
+++ b/lib/messagebundles/MessagesBundle_pt.properties
@@ -26,6 +26,12 @@ DISABLE_BOLD_CHARACTERS=false
 LAYOUT_RIGHT_TO_LEFT=false
 
 ################################################################################
+# Key/value pair for whether or not the tips of the day should be displayed.
+# The default is false (set to true in english resource).
+################################################################################
+HAS_TIPS_OF_THE_DAY=false
+
+################################################################################
 # Keys/value pairs for general strings that can be used in any components
 ################################################################################
 GENERAL_OK_BUTTON_LABEL=OK
@@ -51,6 +57,9 @@ OPTIONS_BUTTONS_CANCEL_LABEL=Cancelar
 OPTIONS_BUTTONS_CANCEL_TIP=Cancelar alterações
 OPTIONS_BUTTONS_APPLY_LABEL=Aplicar
 OPTIONS_BUTTONS_APPLY_TIP=Aplicar alterações
+#??? OPTIONS_RESTART_REQUIRED=One or more options will take effect the next time LimeWire is restarted.
+#??? OPTIONS_BUTTON_REVERT_TO_DEFAULT=Restore Defaults
+#??? OPTIONS_BUTTON_REVERT_TO_DEFAULT_TIP=Revert All Settings to the Factory Defaults
 
 ################################################################################
 # Key/value pairs for general terms, such as "yes" and "no"
@@ -63,10 +72,12 @@ NO=Não
 ################################################################################
 GENERAL_AVERAGE_BANDWIDTH=Largura mèdia de banda
 #??? GENERAL_ALTERNATE_LOCATIONS=Valid alternate locations
+#??? GENERAL_INVALID_ALTERNATE_LOCATIONS=Invalid Alternate Locations
 #??? GENERAL_STARTED_ON=Started on 
 #??? GENERAL_FINISHED_ON=Finished on 
 #??? GENERAL_TIME_SPENT=Time spent
 #??? GENERAL_REVERT_TO_DEFAULT=Revert to default
+#??? GENERAL_MORE_OPTIONS=More Options
 
 # StatusLine, Statistics and GUIUtils
 GENERAL_UNIT_TERABYTES=TB
@@ -88,14 +99,42 @@ ABOUT_LABEL_START=Cliente LimeWire
 ABOUT_LABEL_ADDRESS=http://www.limewire.com
 ABOUT_LABEL_END=Copyright @2000-2002 Lime Wire LLC
 ABOUT_LABEL_TITLE=Sobre o LimeWire
+#??? ABOUT_CREDITS_LABEL=Credits
+#??? ABOUT_CREDITS_TIP=Display credits information about LimeWire.
+#??? ABOUT_NOTICE_LABEL=Notice
+#??? ABOUT_NOTICE_TIP=Display distribution and contact information.
+#??? ABOUT_LICENSE_LABEL=License
+#??? ABOUT_LICENSE_TIP=Display the license agreement about this software.
+ABOUT_SCROLL_CHECK_BOX_LABEL=Deslizar automaticamente
 ABOUT_BUTTON_LABEL=OK
 ABOUT_BUTTON_TIP=Fechar a janela sobre
-ABOUT_SCROLL_CHECK_BOX_LABEL=Deslizar automaticamente
+#Do not uncomment the following line without providing this translated HTML file!
 #ABOUT_FILE_NAME=about_pt.html
-#Do not uncomment the above line without providing this translated HTML file!
 
 ###################################################################
-# Key/value pairs for the Windows system tray -- Coming soon...
+# Key/value pairs for the tip of the day window (not the tips themselves)
+###################################################################
+#??? TOTD_TITLE=Tip of the Day
+#??? TOTD_INTRODUCTION=Did You Know...
+#??? TOTD_SHOW_AT_STARTUP=Show Tips At Startup
+#??? TOTD_NEXT=Next Tip
+#??? TOTD_PREVIOUS=Previous Tip
+#??? TOTD_CLOSE=Close
+
+###################################################################
+# Key/value pairs for the Getting Started image
+###################################################################
+#??? GETTING_STARTED_TITLE=Getting Started
+#??? GETTING_STARTED_CONTENTS=To start using LimeWire, find the text field on the left, type in what you are looking for and click the "Search" button. If you are looking for only one type of content (music, video, etc...), you can narrow your search results by using the buttons above the text field.
+
+###################################################################
+# Key/value pairs for the Going Pro image.
+###################################################################
+#??? GOING_PRO_TITLE=The Most Advanced File Sharing Program on the Planet!
+#??? GOING_PRO_DESCRIPTION=Better search results\nTurbo charged download speeds\nConnections to more sources\nPersonalized tech support\nSix months of free updates
+
+###################################################################
+# Key/value pairs for the Windows system tray
 ###################################################################
 TRAY_TOOLTIP=LimeWire: Rodando a rede Gnutella
 TRAY_RESTORE_LABEL=Restaurar
@@ -222,6 +261,9 @@ MENU_HELP_TITLE_MNEMONIC=U
 MENU_HELP_USING_LIMEWIRE=Utilizando o LimeWire
 MENU_HELP_USING_LIMEWIRE_MNEMONIC=U
 MENU_HELP_USING_LIMEWIRE_ACCESSIBLE=Ajuda para utilizar o LimeWire
+#??? MENU_HELP_TOTD=Tip of the Day
+#??? MENU_HELP_TOTD_MNEMONIC=D
+#??? MENU_HELP_TOTD_ACCESSIBLE=Show the Tip of the Day Window
 MENU_HELP_FAQ=FAQ
 MENU_HELP_FAQ_MNEMONIC=F
 MENU_HELP_FAQ_ACCESSIBLE=Perguntas mais frequentes sobre o LimeWire
@@ -237,6 +279,16 @@ MENU_HELP_REVIEW_ACCESSIBLE=Submeter uma revisão do LimeWire
 MENU_HELP_ABOUT=Sobre...
 MENU_HELP_ABOUT_MNEMONIC=S
 MENU_HELP_ABOUT_ACCESSIBLE=Informações sobre o LimeWire
+#??? MENU_HELP_ERROR=Generate Error
+#??? MENU_HELP_ERROR_MNEMONIC=E
+#??? MENU_HELP_ERROR_ACCESSIBLE=Generate a Popup Error for Testing
+
+################################################################################
+# Keys/value pairs for general tables info
+################################################################################
+#??? TABLES_USE_ROWSTRIPE=Stripe Rows
+#??? TABLES_REAL_TIME_SORTING=Sort Automatically
+#??? TABLES_DISPLAY_TOOLTIPS=Extended Tooltips
 
 ################################################################################
 # Keys/value pairs for SearchView stuff....
