fix script name for consistency with the generated HTML page

--- a/lib/messagebundles/MessagesBundle.properties
+++ b/lib/messagebundles/MessagesBundle.properties
@@ -10,8 +10,8 @@ LOCALE_COUNTRY_NAME=United States
 LOCALE_VARIANT_CODE=
 LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
-LOCALE_SCRIPT_NAME=Latin
-LOCALE_ENGLISH_LANGUAGE_NAME=English
+LOCALE_SCRIPT_NAME=Latin (Western European)
+LOCALE_ENGLISH_LANGUAGE_NAME=English (US)
 
 ################################################################################
 # Key/value pair for whether or not bold characters should be used for this
