filter the international variant name

--- a/lib/messagebundles/MessagesBundle_el.properties
+++ b/lib/messagebundles/MessagesBundle_el.properties
@@ -8,7 +8,7 @@ LOCALE_LANGUAGE_NAME=\u0395\u03bb\u03bb\u03b7\u03bd\u03b9\u03ba\u03ac
 LOCALE_COUNTRY_CODE=
 LOCALE_COUNTRY_NAME=\u0395\u03bb\u03bb\u03ac\u03b4\u03b1, \u039a\u03cd\u03c0\u03c1\u03bf\u03c2
 LOCALE_VARIANT_CODE=
-LOCALE_VARIANT_NAME=Modern standard
+LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Grek
 LOCALE_SCRIPT_NAME=Greek
 LOCALE_ENGLISH_LANGUAGE_NAME=Greek
