--- a/lib/messagebundles/MessagesBundle_pl.properties
+++ b/lib/messagebundles/MessagesBundle_pl.properties
@@ -8,7 +8,7 @@ LOCALE_LANGUAGE_NAME=Polski
 LOCALE_COUNTRY_CODE=
 LOCALE_COUNTRY_NAME=Polska
 LOCALE_VARIANT_CODE=
-LOCALE_VARIANT_NAME=Mi\u0119dzynarodowy
+LOCALE_VARIANT_NAME=International
 LOCALE_SCRIPT_CODE=Latn
 LOCALE_SCRIPT_NAME=Latin (Central European)
 LOCALE_ENGLISH_LANGUAGE_NAME=Polish
