Fix broken resource

--- a/lib/messagebundles/MessagesBundle_fr.properties
+++ b/lib/messagebundles/MessagesBundle_fr.properties
@@ -552,8 +552,8 @@ UPLOAD_TABLE_STRING_UNAVAILABLE_RANGE=Fragment indisponible
 UPLOAD_TABLE_STRING_MALFORMED_REQUEST=Requête malformée
 UPLOAD_TABLE_STRING_COMPLETE=Terminé
 UPLOAD_TABLE_STRING_BANNED_GREEDY=Agent glouton banni
-UPLOAD_TABLE_STRING_FNF=Fichier non trouvé
 UPLOAD_TABLE_STRING_HASH_TREE=Transfert de l'arbre de hachage
+UPLOAD_TABLE_STRING_FNF=Fichier non trouvé
 UPLOAD_TABLE_STRING_QUEUED=Mis en attente
 UPLOAD_STRING_KBPSEC=Ko/s
 UPLOAD_ACTIVE=actif
@@ -988,7 +988,7 @@ ERROR_PORT_UNAVAILABLE=Port non disponible. Veuillez sélectionner un port différ
 ERROR_KEEP_ALIVE=LimeWire ne vous permet pas de maintenir autant de connexions actives, car cela crée un traffic excessif qui ralentit le réseau.
 ERROR_TOO_LOW_FOR_ULTRAPEER=Un Ultrapair connecté à des noeuds terminaux doit avoir au moins six connexions.
 ERROR_TOO_HIGH_FOR_LEAF=Votre Agent terminal n'a besoin que d'une connexion vers un Ultrapair, qui traitera pour vous la plupart des échanges avec de nombreux hôtes.
-ERROR_PORTvous la plupart des échangesrt utilisable pour les connexions entrantes.\nVeuillez spécifier un port dans les options de configuration avancées.
+ERROR_PORT=Aucun port utilisable pour les connexions entrantes n'a pu être déterminé.\nVeuillez spécifier un port dans les options de configuration avancées.
 ERROR_INCOMING_CONNECTIONS=Impossible d'écouter une socket pour les connexions entrantes. Abandon.
 ERROR_THREE_CHARACTER_SEARCH=Votre recherche doit comporter au moins 3 caractères pour éviter la congestion du réseau.
 ERROR_NETWORK_FLOODING=Cette recherche peut avoir de nombreux résultats et ralentir le réseau. Êtes-vous sur de continuer\u00a0?
@@ -1070,8 +1070,8 @@ OPTIONS_THEME_MAIN_TITLE=Thème
 OPTIONS_SKIN_MAIN_TITLE=Habillage
 OPTIONS_SEARCH_MAIN_TITLE=Recherche
 OPTIONS_SEARCH_LIMIT_MAIN_TITLE=Limite
-OPTIONS_SEARCH_SPEED_MAIN_TITLE=Vitesse
 OPTIONS_SEARCH_QUALITY_MAIN_TITLE=Qualité
+OPTIONS_SEARCH_SPEED_MAIN_TITLE=Vitesse
 OPTIONS_FILTERS_MAIN_TITLE=Filtrage
 OPTIONS_RESULTS_MAIN_TITLE=Mots-clés
 OPTIONS_MESSAGES_MAIN_TITLE=Hôtes
@@ -1432,7 +1432,7 @@ OPTIONS_CONNECT_PREF_SLIDER_MIN_LABEL=Rarement
 OPTIONS_CONNECT_PREF_SLIDER_MAX_LABEL=Toujours
 
 ################################################################################
-# Key/Value pairs for the options for setting connection preferences
+# Key/Value pairs for the options for setting connection locale preferences
 # in the advanced panel of the options window
 ################################################################################
 OPTIONS_CONNECT_LOCALE_PREF_TITLE=Locale préférée
@@ -1986,7 +1986,7 @@ DEFAULT_Y_BYTE_AXIS_LABEL=kilooctets
 Y_AXIS_BANDWIDTH_LABEL=kilooctets
 
 ################################################################################
-# Key/Value pairs for statistics graph legend labels
+# Key/Value pairs for statistics graph legend labels and stat window titles
 ################################################################################
 # Column names
 STATS_LEGEND_NAME=Libellé
